--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
                   <a href="#" class="timeline-content">
                     <h3 class="title">CONTACT ADDRESS</h3>
                     <p class="description"> 
-                      <b>Plot: </b> 42-Sahar House, Green Park <br>
-                      <b>Behind: </b>  Sankalp Tower <br>
-                      <b>Near: </b>  Jharkhand Mod, Khatipura Road <br>
-                      <b>City: </b> Jaipur  <br>
-                      <b>State: </b> Rajasthan – 302012 <br>
+                      <b>Mohalla: </b> Seesh Mahal <br>
+                      <b>P.O: </b>  Poonch <br>
+                      <b>Tehsil: </b>  Haveli <br>
+                      <b>City: </b> Poonch  <br>
+                      <b>State: </b> Jammu & Kashmir – 185101 <br>
                     </p>
                   </a>
                 </div>
@@ -155,7 +155,7 @@
                   <a href="#" class="timeline-content">
                     <h3 class="title"> CONTACT DETAILS </h3>
                     <p class="description"> 
-                      <b>Mobile: </b> +91-7615942471<br>
+                      <b>Mobile: </b> +91-6006956369<br>
                       <b>WhatsApp: </b> +91-9541382889<br>
                       <b>Email Official: </b> official.imtiazhussain@gmail.com <br>
                       <b>Email Formal: </b> immuking01@gmail.com <br>
@@ -252,7 +252,7 @@
                                     <h4 class="subheading">Software Developer</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted"><b>Company: </b><a href="https://www.robomq.io/">RoboMQ Private Limited</a><br>Jaipur (Rajasthan)<br><b>As Developer: </b> From 1st June 2018 to 31st Dec 2019<br> <b>As Tech. Lead: </b>From 1st Jan 2020, Till date <br><b>Total Experience: </b>2 Years + </p>
+                                    <p class="text-muted"><b>Company: </b><a href="https://www.linkedin.com/company/nagarro/">Nagarro Limited</a><br>Jaipur (Rajasthan)<br><b>As Developer: </b> From 1st June 2018 to 10 Sep 2020<br> <b>As Senior Engineer: </b>From 14th Sep 2020, Till date <br><b>Total Experience: </b>4.5 Years + </p>
                                 </div>
                             </div>
                         </li>
